@@ -16,6 +16,9 @@ namespace Castle.Facilities.NHibernateIntegration
 {
 	using System;
 	using System.Collections;
+#if DOTNET2
+	using System.Collections.Generic;
+#endif
 
 	using NHibernate;
 	using NHibernate.Collection;
@@ -29,8 +32,13 @@ namespace Castle.Facilities.NHibernateIntegration
 	/// </summary>
 	/// <remarks>
 	/// Contributed by Steve Degosserie <steve.degosserie@vn.netika.com>
+	/// Ported to .net2 by Ernst Naezer <ernst@auxilium.nl>
 	/// </remarks>
+#if DOTNET2
+    public class NHibernateGenericDao<T> : INHibernateGenericDao<T>
+#else
 	public class NHibernateGenericDao : INHibernateGenericDao
+#endif
 	{
 		private readonly ISessionManager sessionManager;
 		private string sessionFactoryAlias = null;
@@ -50,9 +58,137 @@ namespace Castle.Facilities.NHibernateIntegration
 			get { return sessionFactoryAlias; }
 			set { sessionFactoryAlias = value; }
 		}
+                
+        #region IGenericDao Members
 
+#if DOTNET2
 
-		#region IGenericDAO Members
+        public T[] FindAll()
+        {
+            return FindAll(int.MinValue, int.MinValue);
+        }
+
+        public T[] FindAll(int firstRow, int maxRows)
+        {
+            using (ISession session = GetSession())
+            {
+                try
+                {
+                    ICriteria criteria = session.CreateCriteria(typeof(T));
+
+                    if (firstRow != int.MinValue) criteria.SetFirstResult(firstRow);
+                    if (maxRows != int.MinValue) criteria.SetMaxResults(maxRows);
+                    IList<T> result = criteria.List<T>();
+                    if (result == null || result.Count == 0) return null;
+
+                    T[] array =(T[])Array.CreateInstance(typeof(T), result.Count);
+                    result.CopyTo(array, 0);
+                    return array;
+
+                }
+                catch (Exception ex)
+                {
+                    throw new DataException("Could not perform FindAll for " + typeof(T).Name, ex);
+                }
+            }
+        }
+
+        public T FindById(object id)
+        {
+            using (ISession session = GetSession())
+            {
+                try
+                {
+                    return session.Load<T>(id);
+                }
+                catch (ObjectNotFoundException)
+                {
+                    throw;
+                }
+                catch (Exception ex)
+                {
+                    throw new DataException("Could not perform FindByPrimaryKey for " + typeof(T).Name, ex);
+                }
+            }
+
+        }
+
+        public T Create(T instance)
+        {
+            using (ISession session = GetSession())
+            {
+                try
+                {
+                    return (T)session.Save(instance);
+                }
+                catch (Exception ex)
+                {
+                    throw new DataException("Could not perform Create for " + instance.GetType().Name, ex);
+                }
+            }
+        }
+
+        public void Update(T instance)
+        {
+            using (ISession session = GetSession())
+            {
+                try
+                {
+                    session.Update(instance);
+                }
+                catch (Exception ex)
+                {
+                    throw new DataException("Could not perform Update for " + instance.GetType().Name, ex);
+                }
+            }
+        }
+
+        public void Delete(T instance)
+        {
+            using (ISession session = GetSession())
+            {
+                try
+                {
+                    session.Delete(instance);
+                }
+                catch (Exception ex)
+                {
+                    throw new DataException("Could not perform Delete for " + instance.GetType().Name, ex);
+                }
+            }
+        }
+
+        public void DeleteAll()
+        {
+            using (ISession session = GetSession())
+            {
+                try
+                {
+                    session.Delete(String.Format("from {0}", typeof(T).Name));
+                }
+                catch (Exception ex)
+                {
+                    throw new DataException("Could not perform DeleteAll for " + typeof(T).Name + ex);
+                }
+            }
+        }
+
+        public void Save(T instance)
+        {
+            using (ISession session = GetSession())
+            {
+                try
+                {
+                    session.SaveOrUpdate(instance);
+                }
+                catch (Exception ex)
+                {
+                    throw new DataException("Could not perform Save for " + instance.GetType().Name, ex);
+                }
+            }
+        }
+
+#else
 
 		public virtual Array FindAll(Type type)
 		{
@@ -177,11 +313,129 @@ namespace Castle.Facilities.NHibernateIntegration
 				}
 			}
 		}
+#endif
 
-		#endregion
+        #endregion
 
 		#region INHibernateGenericDAO Members
 
+#if DOTNET2
+
+
+        public virtual T[] FindAll(ICriterion[] criterias)
+        {
+            return FindAll(criterias, null, int.MinValue, int.MinValue);
+        }
+
+        public virtual T[] FindAll(ICriterion[] criterias, int firstRow, int maxRows)
+        {
+            return FindAll(criterias, null, firstRow, maxRows);
+        }
+
+        public virtual T[] FindAll(ICriterion[] criterias, Order[] sortItems)
+        {
+            return FindAll(criterias, sortItems, int.MinValue, int.MinValue);
+        }
+
+        public virtual T[] FindAll(ICriterion[] criterias, Order[] sortItems, int firstRow, int maxRows)
+        {
+            using (ISession session = GetSession())
+            {
+                try
+                {
+                    ICriteria criteria = session.CreateCriteria(typeof(T));
+
+                    if (criterias != null)
+                    {
+                        foreach (ICriterion cond in criterias)
+                            criteria.Add(cond);
+                    }
+
+                    if (sortItems != null)
+                    {
+                        foreach (Order order in sortItems)
+                            criteria.AddOrder(order);
+                    }
+
+                    if (firstRow != int.MinValue) criteria.SetFirstResult(firstRow);
+                    if (maxRows != int.MinValue) criteria.SetMaxResults(maxRows);
+                    IList<T> result = criteria.List<T>();
+                    if (result == null || result.Count == 0) return null;
+
+                    T[] array = (T[])Array.CreateInstance(typeof(T), result.Count);
+                    result.CopyTo(array, 0);
+                    return array;
+                }
+                catch (Exception ex)
+                {
+                    throw new DataException("Could not perform FindAll for " + typeof(T).Name, ex);
+                }
+            }
+        }
+
+        public virtual T[] FindAllWithCustomQuery(string queryString)
+        {
+            return FindAllWithCustomQuery(queryString, int.MinValue, int.MinValue);
+        }
+
+        public virtual T[] FindAllWithCustomQuery(string queryString, int firstRow, int maxRows)
+        {
+            if (queryString == null || queryString.Length == 0) throw new ArgumentNullException("queryString");
+
+            using (ISession session = GetSession())
+            {
+                try
+                {
+                    IQuery query = session.CreateQuery(queryString);
+
+                    if (firstRow != int.MinValue) query.SetFirstResult(firstRow);
+                    if (maxRows != int.MinValue) query.SetMaxResults(maxRows);
+                    IList<T> result = query.List<T>();
+                    if (result == null || result.Count == 0) return null;
+
+                    T[] array = (T[])Array.CreateInstance(typeof(T), result.Count);
+                    result.CopyTo(array, 0);
+                    return array;
+                }
+                catch (Exception ex)
+                {
+                    throw new DataException("Could not perform Find for custom query : " + queryString, ex);
+                }
+            }
+        }
+
+        public virtual T[] FindAllWithNamedQuery(string namedQuery)
+        {
+            return FindAllWithNamedQuery(namedQuery, int.MinValue, int.MinValue);
+        }
+
+        public virtual T[] FindAllWithNamedQuery(string namedQuery, int firstRow, int maxRows)
+        {
+            if (namedQuery == null || namedQuery.Length == 0) throw new ArgumentNullException("queryString");
+
+            using (ISession session = GetSession())
+            {
+                try
+                {
+                    IQuery query = session.GetNamedQuery(namedQuery);
+                    if (query == null) throw new ArgumentException("Cannot find named query", "namedQuery");
+
+                    if (firstRow != int.MinValue) query.SetFirstResult(firstRow);
+                    if (maxRows != int.MinValue) query.SetMaxResults(maxRows);
+                    IList<T> result = query.List<T>();
+                    if (result == null || result.Count == 0) return null;
+
+                    T[] array = (T[])Array.CreateInstance(typeof(T), result.Count);
+                    result.CopyTo(array, 0);
+                    return array;
+                }
+                catch (Exception ex)
+                {
+                    throw new DataException("Could not perform Find for named query : " + namedQuery, ex);
+                }
+            }
+        }
+#else
 		public virtual Array FindAll(Type type, ICriterion[] criterias)
 		{
 			return FindAll(type, criterias, null, int.MinValue, int.MinValue);
@@ -300,62 +554,66 @@ namespace Castle.Facilities.NHibernateIntegration
 			}
 		}
 
-		public void InitializeLazyProperties(object instance)
-		{
-			if (instance == null) throw new ArgumentNullException("instance");
+#endif
 
-			using (ISession session = GetSession())
-			{
-				foreach (object val in ReflectionUtil.GetPropertiesDictionary(instance).Values)
-				{
-					if (val is INHibernateProxy || val is PersistentCollection)
-					{
-						if (!NHibernateUtil.IsInitialized(val))
-						{
-							session.Lock(instance, LockMode.None);
-							NHibernateUtil.Initialize(val);
-						}
-					}
-				}
-			}
-		}
+        public void InitializeLazyProperty(object instance, string propertyName)
+        {
+            if (instance == null) throw new ArgumentNullException("instance");
+            if (propertyName == null || propertyName.Length == 0) throw new ArgumentNullException("collectionPropertyName");
 
-		public void InitializeLazyProperty(object instance, string propertyName)
-		{
-			if (instance == null) throw new ArgumentNullException("instance");
-			if (propertyName == null || propertyName.Length == 0) throw new ArgumentNullException("collectionPropertyName");
+            IDictionary properties = ReflectionUtil.GetPropertiesDictionary(instance);
+            if (!properties.Contains(propertyName))
+                throw new ArgumentOutOfRangeException("collectionPropertyName", "Property "
+                    + propertyName + " doest not exist for type "
+                    + instance.GetType().ToString() + ".");
 
-			IDictionary properties = ReflectionUtil.GetPropertiesDictionary(instance);
-			if (! properties.Contains(propertyName))
-				throw new ArgumentOutOfRangeException("collectionPropertyName", "Property "
-					+ propertyName + " doest not exist for type "
-					+ instance.GetType().ToString() + ".");
+            using (ISession session = GetSession())
+            {
+                object val = properties[propertyName];
 
-			using (ISession session = GetSession())
-			{
-				object val = properties[propertyName];
+                if (val is INHibernateProxy || val is IPersistentCollection)
+                {
+                    if (!NHibernateUtil.IsInitialized(val))
+                    {
+                        session.Lock(instance, LockMode.None);
+                        NHibernateUtil.Initialize(val);
+                    }
+                }
+            }
+        }
 
-				if (val is INHibernateProxy || val is PersistentCollection)
-				{
-					if (!NHibernateUtil.IsInitialized(val))
-					{
-						session.Lock(instance, LockMode.None);
-						NHibernateUtil.Initialize(val);
-					}
-				}
-			}
-		}
+        public void InitializeLazyProperties(object instance)
+        {
+            if (instance == null) throw new ArgumentNullException("instance");
 
-		#endregion
+            using (ISession session = GetSession())
+            {
+                foreach (object val in ReflectionUtil.GetPropertiesDictionary(instance).Values)
+                {
+                    if (val is INHibernateProxy || val is IPersistentCollection)
+                    {
+                        if (!NHibernateUtil.IsInitialized(val))
+                        {
+                            session.Lock(instance, LockMode.None);
+                            NHibernateUtil.Initialize(val);
+                        }
+                    }
+                }
+            }
+        }
 
-		#region Private methods
-		private ISession GetSession()
-		{
-			if (sessionFactoryAlias == null || sessionFactoryAlias.Length == 0)
-				return sessionManager.OpenSession();
-			else
-				return sessionManager.OpenSession(sessionFactoryAlias);
-		}
-		#endregion
-	}
+        #endregion
+
+        #region Private methods
+
+        private ISession GetSession()
+        {
+            if (sessionFactoryAlias == null || sessionFactoryAlias.Length == 0)
+                return sessionManager.OpenSession();
+            else
+                return sessionManager.OpenSession(sessionFactoryAlias);
+        }
+
+        #endregion
+    }
 }
